Update 'aynehhsea-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:d2f8e4eef9e928083455d5db263ea31405a1110d@sha256:26a6ef693391788ce179eb75a53c172c81730c8a37dfa6cdebf59672a05a159e

--- a/components/aynehhsea-python/overlays/development/deployment-patch.yaml
+++ b/components/aynehhsea-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: aynehhsea-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:d2f8e4eef9e928083455d5db263ea31405a1110d@sha256:26a6ef693391788ce179eb75a53c172c81730c8a37dfa6cdebf59672a05a159e
+          name: container-image
